prova touch slide mobile

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         </div>
         <!-- Carousel -->
         <div class="col-md-12 col mx-md-auto m-0 my-auto justify-content-center">
-            <div id="recipeCarousel1" class="carousel slide" data-bs-touch="true">
+            <div id="recipeCarousel1" class="carousel slide" data-bs-interval="5000" data-bs-touch="true" data-bs-ride="carousel">
                 <div class="carousel-inner p-0 p-md-5" role="listbox">
                     <div class="carousel-item active">
                         <div class="col-6 col-md-4 col-lg-2">
@@ -139,7 +139,7 @@
                 </div>
             </div>
         </div>
-        <a class="carousel-control-prev bg-transparent w-auto col-1  justify-content-start d-none d-md-flex"
+        <a class="carousel-control-prev bg-transparent w-auto col-1  justify-content-start  d-none d-md-flex"
             href="#recipeCarousel1" role="button" data-bs-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true">
 
@@ -147,7 +147,7 @@
         </a>
         <a class="carousel-control-next bg-transparent w-auto col-1  justify-content-end d-none d-md-flex"
             href="#recipeCarousel1" role="button" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true">
+            <span class="carousel-control-next-icon " aria-hidden="true">
 
             </span>
         </a>
@@ -162,7 +162,7 @@
         </div>
         <!-- Carousel -->
         <div class="col-md-12 col mx-md-auto m-0 my-auto justify-content-center">
-            <div id="recipeCarousel2" class="carousel slide" data-bs-touch="true">
+            <div id="recipeCarousel2" class="carousel slide" data-bs-interval="5000" data-bs-touch="true" data-bs-ride="carousel">
                 <div class="carousel-inner p-0 p-md-5" role="listbox">
                     <div class="carousel-item active">
                         <div class="col-6 col-md-4 col-lg-2">
@@ -225,7 +225,7 @@
         </div>
         <!-- Carousel -->
         <div class="col-md-12 col mx-md-auto m-0 my-auto justify-content-center">
-            <div id="recipeCarousel3" class="carousel slide" data-bs-touch="true">
+            <div id="recipeCarousel3" class="carousel slide" data-bs-interval="5000" data-bs-touch="true" data-bs-ride="carousel">
                 <div class="carousel-inner p-0 p-md-5" role="listbox">
                     <div class="carousel-item active">
                         <div class="col-6 col-md-4 col-lg-2">
