--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
     <div class="container-fluid text-center my-5 position-relative container-slide ">
         <!-- Titolo Slide -->
         <div class="col-12 mx-auto my-4 px-5">
-            <h3 class="text-start ">Trending Now</h3>
+            <h3 class="text-start ">Watch It Again</h3>
         </div>
         <!-- Carousel -->
         <div class="col-md-12 col mx-md-auto m-0 my-auto justify-content-center">
@@ -221,7 +221,7 @@
     <div class="container-fluid text-center my-5 position-relative container-slide ">
         <!-- Titolo Slide -->
         <div class="col-12 mx-auto my-4 px-5">
-            <h3 class="text-start ">Trending Now</h3>
+            <h3 class="text-start ">New Releases</h3>
         </div>
         <!-- Carousel -->
         <div class="col-md-12 col mx-md-auto m-0 my-auto justify-content-center">
