finale senza extra

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     </nav>
 
     <!-- Barra Titolo Pagina -->
-    <div class="row m-5 justify-content-between">
+    <div class="row mx-0 mx-md-3 mx-lg-5 my-3 justify-content-between">
         <div class="col-auto gap-2 d-flex align-items-baseline">
 
             <h4>TV Shows</h4>
@@ -93,7 +93,7 @@
     <!-- Carousel 1 -->
     <div class="container-fluid text-center my-5 position-relative container-slide ">
         <!-- Titolo Slide -->
-        <div class="col-12 mx-auto my-4 px-5">
+        <div class="col-12 mx-auto my-4 px-0 px-md-3 px-lg-5">
             <h3 class="text-start ">Trending Now</h3>
         </div>
         <!-- Carousel -->
@@ -157,7 +157,7 @@
     <!-- Carousel 2 -->
     <div class="container-fluid text-center my-5 position-relative container-slide ">
         <!-- Titolo Slide -->
-        <div class="col-12 mx-auto my-4 px-5">
+        <div class="col-12 mx-auto my-4 px-0 px-md-3 px-lg-5">
             <h3 class="text-start ">Watch It Again</h3>
         </div>
         <!-- Carousel -->
@@ -220,7 +220,7 @@
     <!-- Carousel 3 -->
     <div class="container-fluid text-center my-5 position-relative container-slide ">
         <!-- Titolo Slide -->
-        <div class="col-12 mx-auto my-4 px-5">
+        <div class="col-12 mx-auto my-4 px-0 px-md-3 px-lg-5">
             <h3 class="text-start ">New Releases</h3>
         </div>
         <!-- Carousel -->
@@ -298,7 +298,7 @@
                     <li class="list-group-item list-group-item-dark border-none bg-dark mb-3">Privacy</li>
                     <li class="list-group-item list-group-item-dark border-none bg-dark mb-3">Contact Us</li>
                 </ul>
-                <button class="btn btn-outline-light rounded-0 my-2">Service Code</button>
+                
             </div>
             <div class="col-3">
                 <ul class="bg-dark  p-0 mb-2">
@@ -322,7 +322,11 @@
                 </ul>
             </div>
             <div class="col-12 my-2">
-                © 1997-2019 Netflix, Inc.
+                <button class="row btn btn-outline-light rounded-0 my-2">Service Code</button>
+                <div class="row">
+
+                    © 1997-2019 Netflix, Inc.
+                </div>
             </div>
         </div>
         
