--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/b68de36aab.js" crossorigin="anonymous"></script>
-    <title>Document</title>
+    <title>Netflix Mockup</title>
 </head>
 
 <body class="bg-dark text-light">
