carousel touch con intervallo molto grande

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         </div>
         <!-- Carousel -->
         <div class="col-md-12 col mx-md-auto m-0 my-auto justify-content-center">
-            <div id="recipeCarousel1" class="carousel slide"  data-bs-touch="true" >
+            <div id="recipeCarousel1" class="carousel slide" data-bs-interval="200000" data-bs-touch="true" data-bs-ride="carousel">
                 <div class="carousel-inner p-0 p-md-5" role="listbox">
                     <div class="carousel-item active">
                         <div class="col-6 col-md-4 col-lg-2">
@@ -162,7 +162,7 @@
         </div>
         <!-- Carousel -->
         <div class="col-md-12 col mx-md-auto m-0 my-auto justify-content-center">
-            <div id="recipeCarousel2" class="carousel slide" data-bs-touch="true" >
+            <div id="recipeCarousel2" class="carousel slide" data-bs-interval="200000" data-bs-touch="true" data-bs-ride="carousel">
                 <div class="carousel-inner p-0 p-md-5" role="listbox">
                     <div class="carousel-item active">
                         <div class="col-6 col-md-4 col-lg-2">
@@ -225,7 +225,7 @@
         </div>
         <!-- Carousel -->
         <div class="col-md-12 col mx-md-auto m-0 my-auto justify-content-center">
-            <div id="recipeCarousel3" class="carousel slide"  data-bs-touch="true" >
+            <div id="recipeCarousel3" class="carousel slide" data-bs-interval="200000" data-bs-touch="true" data-bs-ride="carousel">
                 <div class="carousel-inner p-0 p-md-5" role="listbox">
                     <div class="carousel-item active">
                         <div class="col-6 col-md-4 col-lg-2">
