--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
                 </ul>
             </div>
-            <div class="col-auto d-flex align-items-center position-absolute top-0 end-0 pt-3 pe-2">
+            <div class="col-auto d-flex align-items-center position-absolute top-0 end-0 pt-3 pe-3 pe-md-2">
                 <button class="btn" type="submit">
                     <i class="fa-solid fa-magnifying-glass"></i>
                 </button>
@@ -53,9 +53,24 @@
                         <img src="assets/imgs/user.jpg" alt="" id="user-img">
                     </button>
                     <ul class="dropdown-menu dropdown-menu-end">
-                        <li><button class="dropdown-item" type="button">Action</button></li>
-                        <li><button class="dropdown-item" type="button">Another action</button></li>
-                        <li><button class="dropdown-item" type="button">Something else here</button></li>
+                        <li class="px-1">
+                            <span class="row justify-content-evenly">
+                                <span class="col-4">
+
+                                    <img src="assets/imgs/user.jpg" alt="" id="avatar" class="rounded-circle  w-100 h-auto">
+                                </span>
+                                <span class="col-8 pt-2">
+                                    <span class="row text-profile">Annette Black</span>
+                                    <span class="row text-profile">annette@geeksui.com</span>
+                                </span>
+                            </span>
+                        </li>
+                        <li><hr class="dropdown-divider"></li>
+                        <li><a class="dropdown-item" href="#"><i class="fa-regular fa-user"></i> Profile</a></li>
+                        <li><a class="dropdown-item" href="#"><i class="fa-solid fa-star"></i> Subscription</a></li>
+                        <li><a class="dropdown-item" href="#"><i class="fa-solid fa-gear"></i> Settings</a></li>
+                        <li><hr class="dropdown-divider"></li>
+                        <li><a class="dropdown-item" href="#"><i class="fa-solid fa-power-off"></i> Sign Out</a></li>
                     </ul>
                 </div>
 
